byteserde_derive/tests/error_scenarios/panic_struct_unit.stderr
error: proc-macro derive panicked
 --> tests/error_scenarios/panic_struct_unit.rs:3:10
  |
3 | #[derive(ByteSerializeStack)]
  |          ^^^^^^^^^^^^^^^^^^
  |
  = help: message: Unit struct type is not supported, found 'StrictUnit'
